adding last updates to aAbout-me

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -21,38 +21,43 @@
           </nav>
         </header>
         <main>
-            <section>
-                <h4>Short Biography About Me</h4>
-                 <p>A Healthcare professional, certified Innovation professional and 
-                    <q> Full stack developer candidate - 
-               with clinical oncology care experience -</q> 
-               seeking continuous knowledge by developing programming skills 
-               for healthcare innovation, including artificial intelligence 
-               applications in healthcare , clinical data analytics, 
-               and every technology-based projects related to 
-               improve the quality of health care services ,
-                patient experience, patient engagement ,health policies , 
-               and patient journey especially in cancer care.
-                 </p>
-                <h4>My Job Experience</h4>
-                 <p><strong> Healthcare Innovation Professional</strong>,<sup>(April 2019 – present)</sup>
-                    Global Innovation Institute & Dream & Idea consulting firm. 
-                    Senior Healthcare Innovation Consultant.
-                    <br>
-                    <strong> Clinical Pharmacist</strong>,<sup>(July 2017 – October 2019)</sup>
-                    King Hussein Cancer and Research Center (JCI accredited). 
-                    <br>
+                <section>
+                    <h4 class="style">Short Biography About Me</h4>
+                    <p>A Healthcare professional, certified Innovation professional and 
+                        <q> Full stack developer candidate - 
+                with clinical oncology care experience -</q> 
+                seeking continuous knowledge by developing programming skills 
+                for healthcare innovation, including artificial intelligence 
+                applications in healthcare , clinical data analytics, 
+                and every technology-based projects related to 
+                improve the quality of health care services ,
+                    patient experience, patient engagement ,health policies , 
+                and patient journey especially in cancer care.
                     </p>
-                <h4>My Education History</h4>
-                 <p>
-                    <strong> BACHELOR OF Doctor of Pharmacy</strong>,<sup>(2011 – 2017)</sup>
-                    Jordan University of Science and Technology.
-                    GPA (89.4%), Excellent degree, 2nd on the Class (With honors)    
-                 </p>
-                 
-                 <h4>My Future Goals</h4>
-                 <p>Creating a software system ,based on the new programming skills, 
-                     to help in the prediction of ,life saving if early diagnosed, medical conditions </p>
+                    </section>
+                <section>   
+                    <h4 class="style">My Job Experience</h4>
+                    <p><strong> Healthcare Innovation Professional</strong>,<sup>(April 2019 – present)</sup>
+                        Global Innovation Institute & Dream & Idea consulting firm. 
+                        Senior Healthcare Innovation Consultant.
+                        <br>
+                        <strong> Clinical Pharmacist</strong>,<sup>(July 2017 – October 2019)</sup>
+                        King Hussein Cancer and Research Center (JCI accredited). 
+                        <br>
+                        </p>
+                    </section> 
+                    <section>
+                    <h4 class="style">My Education History</h4>
+                    <p>
+                        <strong> BACHELOR OF Doctor of Pharmacy</strong>,<sup>(2011 – 2017)</sup>
+                        Jordan University of Science and Technology.
+                        GPA (89.4%), Excellent degree, 2nd on the Class (With honors)    
+                    </p>
+                </section>
+                <section>
+                    <h4 class="style">My Future Goals</h4>
+                    <p>Creating a software system ,based on the new programming skills, 
+                        to help in the prediction of ,life saving if early diagnosed, medical conditions </p>
 
             </section>
         </main>
